--- a/index.html
+++ b/index.html
@@ -1,72 +1,71 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-        <meta charset="utf-8">
-        <title>HTML Academy: Девайс</title>
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&amp;subset=cyrillic" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
+  <meta charset="utf-8">
+  <title>HTML Academy: Девайс</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&amp;subset=cyrillic" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <header class="header-main">
+  <header class="header-main">
     <h1 class="logo">DEVICE</h1>
     <section class="header-menu">
-    <form class="search">
-    <input type="search">
-    <button></button>
-    </form>
-    <ul class="header-menu-small">
+      <form class="search">
+        <input type="search">
+        <button></button>
+      </form>
+      <ul class="header-menu-small">
         <li><a href="#">Войти</a></li>
         <li><a href="#">Сравнить</a></li>
         <li><a href="#">Корзина</a></li>
-    </ul>
+      </ul>
     </section>
     <section class="header-menu-main">
-    <div class="header-catalog">
-      <a href="inner.html">Каталог товаров</a>
-      <ul class="header-catalog-menu">
+      <div class="header-catalog">
+        <a href="inner.html">Каталог товаров</a>
+        <ul class="header-catalog-menu">
           <li><a href="#">Виртуальная реальность</a></li>
           <li><a href="#">Моноподы для селфи</a></li>
           <li><a href="#">Экшн-камеры</a></li>
           <li><a href="#">Фитнес-браслеты</a></li>
           <li><a href="#">Умные часы</a></li>
           <li><a href="#">Квадрокоптеры</a></li>
-      </ul>
-    </div>
-    <ul class="option-menu">
-        <li><a href="#">Доставка</a></li>
-        <li><a href="#">Гарантия</a></li>
-        <li><a href="#">Контакты</a></li>
-    </ul>
+        </ul>
+      </div>
+        <ul class="option-menu">
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Гарантия</a></li>
+          <li><a href="#">Контакты</a></li>
+       </ul>
     </section>
     </header>
 
 <main>
-    <section class="product">
-      <img class="product-item" src="img/slider-1.png" alt="Сэлфи-палка">
-      <b>Делай селфи,как Бен Стиллер!</b>
-      <p>
+  <section class="product">
+    <img class="product-item" src="img/slider-1.png" alt="Сэлфи-палка">
+    <b>Делай селфи,как Бен Стиллер!</b>
+    <p>
       Самая длинная палка для селфи доступна в нашем магазине.<br>
     Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
     </p>
     <a class="product-more button" href="#">Подробнее</a>
     <table class="product-item-description">
       <tr>
-            <td>8,5 м</td>
-            <td>5 кг</td>
-            <td>Карбон</td>
+        <td>8,5 м</td>
+        <td>5 кг</td>
+        <td>Карбон</td>
       </tr>
       <tr>
-            <td>Длина палки</td>
-            <td>Вес палки</td>
-            <td>Материал</td>
+        <td>Длина палки</td>
+        <td>Вес палки</td>
+        <td>Материал</td>
       </tr>
      </table>
-    </section>
-
-     <section class="product">
-      <img class="product-item" src="img/slider-2.png" alt="Фитнес-браслет">
-      <b>Худеем
+  </section>
+  <section class="product">
+    <img class="product-item" src="img/slider-2.png" alt="Фитнес-браслет">
+    <b>Худеем
     правильно!</b>
     <p>
       Мотивирующие фитнес-браслеты помогут найти в себе силы
@@ -75,158 +74,144 @@
     <a class="product-more button" href="#">Подробнее</a>
     <table class="product-item-description">
       <tr>
-            <td>48 часов</td>
+        <td>48 часов</td>
       </tr>
       <tr>
-            <td>Без подзарядки</td>
+        <td>Без подзарядки</td>
       </tr>
      </table>
-    </section>
-
-    <section class="product">
-      <img class="product-item" src="img/slider-3.png" alt="Квадрокоптер">
-      <b>Порхает как бабочка,
+  </section>
+  <section class="product">
+    <img class="product-item" src="img/slider-3.png" alt="Квадрокоптер">
+    <b>Порхает как бабочка,
     жалит как пчела!</b>
-      <p>
+    <p>
       Этот обычный, на первый взгляд, квадрокоптер оснащен
     мощным лазером, замаскированным под стандартную камеру.
     </p>
     <a class="product-more button" href="#">Подробнее</a>
     <table class="product-item-description">
       <tr>
-            <td>800 M</td>
-            <td>50 М</td>
+        <td>800 M</td>
+        <td>50 М</td>
       </tr>
       <tr>
-            <td>Дальность полета</td>
-            <td>Радиус поражения</td>
+        <td>Дальность полета</td>
+        <td>Радиус поражения</td>
       </tr>
     </table>
-    </section>
-
-
-
-    <section class="catalog">
-      <ul class="catalog-item">
-        <li class="catalog-popular">
-            <a href="#"><b>Виртуальная реальность</b></a>
-        </li>
-        <li class="catalog-popular">
-            <a href="#"> <b>Моноподы для селфи</b></a>
-        </li>
-        <li class="catalog-popular">
-            <a href="#"><b>Экшн-камеры</b></a>
-        </li>
-        <li class="catalog-popular">
-            <a href="#"><b>Фитнес-браслеты</b></a>
-        </li>
-        <li class="catalog-popular">
-            <a href="#"><b>Умные часы</b></a>
-        </li>
-        <li class="catalog-popular">
-            <a href="#"><b>Квадрокоптеры</b></a>
-        </li>
-      </ul>
-    </section>
-    <div class="service">
+  </section>
+  <section class="catalog">
+    <ul class="catalog-item">
+      <li class="catalog-popular">
+        <a href="#"><b>Виртуальная реальность</b></a>
+      </li>
+      <li class="catalog-popular">
+        <a href="#"> <b>Моноподы для селфи</b></a>
+      </li>
+      <li class="catalog-popular">
+        <a href="#"><b>Экшн-камеры</b></a>
+      </li>
+      <li class="catalog-popular">
+        <a href="#"><b>Фитнес-браслеты</b></a>
+      </li>
+      <li class="catalog-popular">
+        <a href="#"><b>Умные часы</b></a>
+      </li>
+      <li class="catalog-popular">
+        <a href="#"><b>Квадрокоптеры</b></a>
+      </li>
+    </ul>
+  </section>
+  <div class="service">
     <ul class="services">
       <li><button class="services-button" type="button">Доставка</button></li>
       <li><button class="services-button" type="button">Гарантия</button></li>
       <li><button class="services-button" type="button">Кредит</button></li>
     </ul>
-
-    <section class="services-about">
+  <section class="services-about">
     <h2>Доставка</h2>
     <p>Мы с удовольствием доставим ваш товар прямо к вашему<br>
        подъезду совершенно бесплатно! Ведь мы неплохо заработаем,<br>
-        поднимая его на ваш этаж.</p>
-
-    </section>
-    </div>
-    <div class="slider">
-    <label for="item-slider" class="visually-hidden">Переключить товар </label>
+        поднимая его на ваш этаж.
+    </p>
+  </section>
+  </div>
+  <div class="slider">
+  <label for="item-slider" class="visually-hidden">Переключить товар </label>
     <input id="item-slider" type="radio" name="item-slider" >
     <input id="item-slider" type="radio" name="item-slider" >
     <input id="item-slider" type="radio" name="item-slider" >
-    </div>
-
-    <ul class="partners">
-       <li class="partners-logo"><img src="img/logo-1.png" alt="DJI"></li>
-       <li class="partners-logo"><img src="img/logo-2.png" alt="SP Gadgets"></li>
-       <li class="partners-logo"><img src="img/logo-3.png" alt="GoPro"></li>
-       <li class="partners-logo"><img src="img/logo-4.png" alt="vive"></li>
+  </div>
+  <ul class="partners">
+    <li class="partners-logo"><img src="img/logo-1.png" alt="DJI"></li>
+    <li class="partners-logo"><img src="img/logo-2.png" alt="SP Gadgets"></li>
+    <li class="partners-logo"><img src="img/logo-3.png" alt="GoPro"></li>
+    <li class="partners-logo"><img src="img/logo-4.png" alt="vive"></li>
+  </ul>
+  <section class="about-us">
+    <h2>О нас</h2>
+    <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+    <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
+    <ul>
+      <li>Деловые Линии</li>
+      <li>Автотрейдинг</li>
+      <li>ЖелДорЭкспедиция</li>
     </ul>
+    <a class="about-us-more button" href="#">Подробнее о нас</a>
+  </section>
 
-    <section class="about-us">
-      <h2>О нас</h2>
-      <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-      <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
-      <ul>
-        <li>Деловые Линии</li>
-        <li>Автотрейдинг</li>
-        <li>ЖелДорЭкспедиция</li>
-      </ul>
-      <a class="about-us-more button" href="#">Подробнее о нас</a>
-    </section>
-
-    <section class="contacts">
-      <h2>Контакты</h2>
-      <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+  <section class="contacts">
+    <h2>Контакты</h2>
+    <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1123749473636!2d37.52742931602769!3d55.68703400452987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsINCg0L7RgdGB0LjRjywgMTE5MzEx!5e0!3m2!1sru!2sus!4v1520274363794" width="800" height="360" frameborder="0" style="border:0" allowfullscreen></iframe>
-          <button class="write-to-us button" type="button">Напишите нам</button>
-    </section>
+    <button class="write-to-us button" type="button">Напишите нам</button>
+  </section>
+</main>
 
-    </main>
-
-    <footer class="footer-main">
-      <div class="footer-info">
-        <h2>DEVICE</h2>
-        </div>
-
-        <ul class="footer-menu-small">
+  <footer class="footer-main">
+    <div class="footer-info">
+      <h2>DEVICE</h2>
+    </div>
+    <ul class="footer-menu-small">
             <li><a href="#">Войти</a></li>
             <li><a href="#">Сравнить</a></li>
             <li><a href="#">Корзина</a></li>
-      </ul>
-        <span class="footer-adress">г. Москва, ул. Строителей, 15</span>
-
-      <ul class="footer-menu-main">
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Гарантия</a></li>
-          <li><a href="#">Контакты</a></li>
-      </ul>
-
-      <a class="footer-tel" href="tel:+74954959595">Тел.: +7 (495) 495-95-95</a>
-
-      <ul class="footer-social">
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">Instagram</a></li>
-        <li><a href="#">Twiter</a></li>
-      </ul>
-
-      <a class="footer-html" href="https://htmlacademy.ru/">ссылка на академию</a>
-
-    </footer>
-      <form class="write-us" action="#" method="post">
-          <p>
-            <label for="write-us-name">Ваше имя:</label>
-       <input id="write-us-name" type="text" placeholder="Имя Фамилия">
-      </p>
-      <p>
-          <label for="write-us-email">Ваш e-mail</label>
-          <input id="write-us-email" type="text" placeholder="email@example.com">
-      </p>
-      <p>
-          <label for="write-us-text">Текст письма:</label>
-          <input id="write-us-text" type="text" placeholder="В свободной форме" >
-      </p>
+    </ul>
+    <span class="footer-adress">г. Москва, ул. Строителей, 15</span>
+    <ul class="footer-menu-main">
+      <li><a href="#">Доставка</a></li>
+      <li><a href="#">Гарантия</a></li>
+      <li><a href="#">Контакты</a></li>
+    </ul>
+    <a class="footer-tel" href="tel:+74954959595">Тел.: +7 (495) 495-95-95</a>
+    <ul class="footer-social">
+      <li><a href="#">Facebook</a></li>
+      <li><a href="#">Instagram</a></li>
+      <li><a href="#">Twiter</a></li>
+    </ul>
+    <a class="footer-html" href="https://htmlacademy.ru/">ссылка на академию</a>
+  </footer>
+      
+  <form class="write-us" action="#" method="post">
+    <p>
+      <label for="write-us-name">Ваше имя:</label>
+      <input id="write-us-name" type="text" placeholder="Имя Фамилия">
+    </p>
+    <p>
+      <label for="write-us-email">Ваш e-mail</label>
+       <input id="write-us-email" type="text" placeholder="email@example.com">
+    </p>
+    <p>
+       <label for="write-us-text">Текст письма:</label>
+       <input id="write-us-text" type="text" placeholder="В свободной форме" >
+    </p>
       <button class="write-us-send button" type="submit">Отправить</button>
       <button class="write-us-close">X</button>
-      </form>
-      <div class="map-popup">
-        <img src="img/map-big.jpg" alt="улица Сроителей 15">
-      <button class="map-popup-close">X</button>
-      </div>
+  </form>
+  <div class="map-popup">
+    <img src="img/map-big.jpg" alt="улица Сроителей 15"><button class="map-popup-close">X</button>
+  </div>
 
-      </body>
-    </html>
+</body>
+</html>
