--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Девайс</title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&amp;subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=<Open></Open>+Sans:300,400&amp;subset=cyrillic" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
 
@@ -23,7 +23,7 @@
     </section>
     <section class="header-menu-main">
       <div class="header-catalog">
-        <a href="inner.html">Каталог товаров</a>
+        <a class="catalog-link" href="inner.html">Каталог товаров</a>
         <ul class="header-catalog-menu">
           <li><a href="#">Виртуальная реальность</a></li>
           <li><a href="#">Моноподы для селфи</a></li>
@@ -61,7 +61,7 @@
         <td>Вес палки</td>
         <td>Материал</td>
       </tr>
-     </table>
+    </table>
   </section>
   <section class="product">
     <img class="product-item" src="img/slider-2.png" alt="Фитнес-браслет">
@@ -79,7 +79,7 @@
       <tr>
         <td>Без подзарядки</td>
       </tr>
-     </table>
+    </table>
   </section>
   <section class="product">
     <img class="product-item" src="img/slider-3.png" alt="Квадрокоптер">
@@ -174,9 +174,9 @@
       <h2>DEVICE</h2>
     </div>
     <ul class="footer-menu-small">
-            <li><a href="#">Войти</a></li>
-            <li><a href="#">Сравнить</a></li>
-            <li><a href="#">Корзина</a></li>
+      <li><a href="#">Войти</a></li>
+      <li><a href="#">Сравнить</a></li>
+      <li><a href="#">Корзина</a></li>
     </ul>
     <span class="footer-adress">г. Москва, ул. Строителей, 15</span>
     <ul class="footer-menu-main">
@@ -207,7 +207,7 @@
        <input id="write-us-text" type="text" placeholder="В свободной форме" >
     </p>
       <button class="write-us-send button" type="submit">Отправить</button>
-      <button class="write-us-close">X</button>
+      <button class="write-us-close ">X</button>
   </form>
   <div class="map-popup">
     <img src="img/map-big.jpg" alt="улица Сроителей 15"><button class="map-popup-close">X</button>
