--- a/inner.html
+++ b/inner.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Девайс</title>
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
   <header class="header-main">
-    <h1><a href="index.html">DEVICE</a></h1>
+    <h1><a class="logo" href="index.html">DEVICE</a></h1>
     <section class="header-menu">
       <form class="search" action="" method="post">
         <label for="search-field" class="visually-hidden">Поиск по сайту</label>
@@ -23,7 +24,7 @@
     </section>
     <section class="header-menu-main">
       <div class="header-catalog">
-        <a href="inner.html">Каталог товаров</a>
+        <a class="catalog-link" href="inner.html">Каталог товаров</a>
         <ul class="header-catalog-menu">
           <li><a href="#">Виртуальная реальность</a></li>
           <li><a href="#">Моноподы для селфи</a></li>
@@ -33,7 +34,7 @@
           <li><a href="#">Квадрокоптеры</a></li>
         </ul>
       </div>
-      <ul class="">
+      <ul class="option-menu">
         <li><a href="#">Доставка</a></li>
         <li><a href="#">Гарантия</a></li>
         <li><a href="#">Контакты</a></li>
@@ -44,20 +45,14 @@
 <main>
   <h2 class="page-title">Моноподы для селфи</h2>
   <ul class="navigation">
-    <li><a href="index.html">Главная</a></li>
-    <li><a href="inner.html">Каталог товаров</a></li>
-    <li class="navigation-current">Моноподы для селфи</li>
+    <li class="navigation-previous"><a class="navigation-page" href="index.html">Главная</a></li>
+    <li class="navigation-previous"><a class="navigation-page" href="inner.html">Каталог товаров</a></li>
+    <li class="navigation-current navigation-page">Моноподы для селфи</li>
   </ul>
-  <span class="criteria-filter">Фильтр</span>
-  <span class="criteria-sort">Сортировка</span>
-        <ul class="criteria">
-          <li> <button class="criteria-button" type="button">По цене</button></li>
-          <li><button class="criteria-button" type="button">По типу</button></li>
-          <li><button class="criteria-button" type="button">По популярности</button></li>
-        </ul>
-  <button class="up"></button>
-  <button class="down"></button>
-  <form class="filter" action="#" method="post">
+ 
+  <section class="filter">
+  <h2 class="criteria-filter">Фильтр</h2>
+  <form class="settings" action="#" method="post">
   <fieldset>
     <p>
       <legend>Стоимость</legend>
@@ -67,20 +62,31 @@
   </fieldset>
   <fieldset>
     <legend>Цвет</legend>
-    <label><input type="checkbox" name="black" >Черный</label>
-    <label><input type="checkbox" name="white" >Белый</label>
-    <label><input type="checkbox" name="blue" >Синий</label>
-    <label><input type="checkbox" name="red" >Красный</label>
-    <label><input type="checkbox" name="pink" >Розовый</label>
+    <label for="color-box" class="color"><input type="checkbox" name="black"  id="color-box">Черный</label>
+    <label for="color-box" class="color"><input type="checkbox" name="white"  id="color-box">Белый</label>
+    <label for="color-box" class="color"><input type="checkbox" name="blue"  id="color-box">Синий</label>
+    <label for="color-box" class="color"><input type="checkbox" name="red" id="color-box" >Красный</label>
+    <label for="color-box" class="color"><input type="checkbox" name="pink"  id="color-box">Розовый</label>
   </fieldset>
   <fieldset>
     <legend>Bluetooth</legend>
     <label><input type="radio" name="yes" сhecked>Есть</label>
     <label><input type="radio" name="no" >Нет</label>
-    <button class="show-items" type="submit">Показать</button>
+    <button class="show-items button" type="submit">Показать</button>
   </fieldset>
   </form>
+  </section>
   <section class="list">
+    <div class="sort">
+    <h2 class="criteria-sort">Сортировка</h2>
+      <ul class="criteria">
+        <li> <button class="criteria-button" type="button">По цене</button></li>
+        <li><button class="criteria-button" type="button">По типу</button></li>
+        <li><button class="criteria-button" type="button">По популярности</button></li>
+      </ul>
+  <button class="up"></button>
+  <button class="down"></button>
+  </div>
     <div class="list-item">
       <img src="img/item-1.jpg" alt="Любительская селфи-палка">
       <h3><a href="#">Любительская селфи-палка</a></h3>
@@ -96,56 +102,45 @@
       <h3><a href="#">Непотопляемая селфи-палка</a></h3>
       <b>2 500 руб.</b>
     </div>
+    <div class="list-item">
+      <img src="img/item-4.jpg" alt="Селфи-палка «Следуй за мной»">
+      <h3><a href="#">Селфи-палка «Следуй за мной»</a></h3>
+      <b>4 900 руб.</b>
+    </div>
+    <ul class="pages">
+      <li><button class="page-list button">Назад</button></li>
+      <li><button class="page-list button">1</button></li>
+      <li><button class="page-list button">2</button></li>
+      <li><button class="page-list button">3</button></li>
+      <li><button class="page-list button">Вперед</button></li>
+    </ul>
+    <span class="list-item-new">New</span>
+</section>
+</main>
 
-               
-               
-               <div class="list-item">
-                <img src="img/item-4.jpg" alt="Селфи-палка «Следуй за мной»">
-                <h3><a href="#">Селфи-палка «Следуй за мной»</a></h3>
-                <b>4 900 руб.</b>
-            </div>
-            <ul class="pages">
-                <li><button>Назад</button></li>
-                <li><button>1</button></li>
-                <li><button>2</button></li>
-                <li><button>3</button></li>
-                <li><button>Вперед</button></li>
-            </ul>
-            <span class="list-item-new">New</span>
-        </section>
-    </main>
-
-    <footer class="footer-main">
-        <div class="footer-info">
-            <h2>DEVICE</h2>
-        </div>
-
-        <ul class="footer-menu-small">
-            <li><a href="#">Выйти</a></li>
-            <li><a href="#">Сравнить</a></li>
-            <li><a href="#">Корзина</a></li>
-        </ul>
-
-        <span class="footer-adress">г. Москва, ул. Строителей, 15</span>
-
-        <ul class="footer-menu-main">
-            <li><a href="#">Доставка</a></li>
-            <li><a href="#">Гарантия</a></li>
-            <li><a href="#">Контакты</a></li>
-        </ul>
-        <span class="user-name">Валентин Петухов</span>
-
-        <a class="footer-tel" href="tel:+74954959595">Тел.: +7 (495) 495-95-95</a>
-        <ul class="footer-social">
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Instagram</a></li>
-            <li><a href="#">Twiter</a></li>
-
-        </ul>
-        <a class="footer-html" href="https://htmlacademy.ru/">ссылка на академию</a>
-
-    </footer>
-
+<footer class="footer-main">
+  <div class="footer-info">
+    <h2>DEVICE</h2>
+  </div>
+  <ul class="footer-menu-small">
+    <li><a href="#">Выйти</a></li>
+    <li><a href="#">Сравнить</a></li>
+    <li><a href="#">Корзина</a></li>
+  </ul>
+  <span class="footer-adress">г. Москва, ул. Строителей, 15</span>
+  <ul class="footer-menu-main">
+    <li><a href="#">Доставка</a></li>
+    <li><a href="#">Гарантия</a></li>
+    <li><a href="#">Контакты</a></li>
+  </ul>
+  <span class="user-name">Валентин Петухов</span>
+  <a class="footer-tel" href="tel:+74954959595">Тел.: +7 (495) 495-95-95</a>
+  <ul class="footer-social">
+    <li><a href="#">Facebook</a></li>
+    <li><a href="#">Instagram</a></li>
+    <li><a href="#">Twiter</a></li>
+  </ul>
+  <a class="footer-html" href="https://htmlacademy.ru/">ссылка на академию</a>
+</footer>
 </body>
-
 </html>
