--- a/index.html
+++ b/index.html
@@ -9,42 +9,55 @@
 
 <body>
   <header class="header-main">
-    <h1 class="logo">DEVICE</h1>
-    <section class="header-menu">
-      <form class="search">
+   <nav class="main-navigation">
+     <!--<h1 class="logo">DEVICE</h1>-->
+      <div class="main-navigation-wrapper">
+      <div class="container">
+       <form class="search">
         <input type="search">
-        <button></button>
+       <!-- <button></button>-->
       </form>
+      <ul class="menu-sign-in">
+          <li><a href="#">Войти</a></li>
+      </ul>
       <ul class="header-menu-small">
-        <li><a href="#">Войти</a></li>
         <li><a href="#">Сравнить</a></li>
         <li><a href="#">Корзина</a></li>
       </ul>
-    </section>
-    <section class="header-menu-main">
-      <div class="header-catalog">
-        <a class="catalog-link" href="inner.html">Каталог товаров</a>
-        <ul class="header-catalog-menu">
+       </div>
+       <div class="header-catalog-menu-wrapper">
+       <div class="container">
+        <ul class="catalog-link" >
+        <li><a href="inner.html">Каталог товаров</a></li>
+        </ul>
+        <!-- <ul class="header-catalog-menu">
           <li><a href="#">Виртуальная реальность</a></li>
           <li><a href="#">Моноподы для селфи</a></li>
           <li><a href="#">Экшн-камеры</a></li>
           <li><a href="#">Фитнес-браслеты</a></li>
           <li><a href="#">Умные часы</a></li>
           <li><a href="#">Квадрокоптеры</a></li>
-        </ul>
-      </div>
+        </ul>-->
         <ul class="option-menu">
           <li><a href="#">Доставка</a></li>
           <li><a href="#">Гарантия</a></li>
           <li><a href="#">Контакты</a></li>
        </ul>
-    </section>
+       </div>
+       </div>
+       </div>
+    </nav>
     </header>
 
 <main>
+ <div class="wrapper">
   <section class="product">
+   <div class="product-wrapper">
+   <div class="product-image">
     <img class="product-item" src="img/slider-1.png" alt="Сэлфи-палка">
-    <b>Делай селфи,как Бен Стиллер!</b>
+    </div>
+    <div class="product-info">
+    <b>Делай селфи,<br>как Бен Стиллер!</b>
     <p>
       Самая длинная палка для селфи доступна в нашем магазине.<br>
     Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
@@ -62,8 +75,10 @@
         <td>Материал</td>
       </tr>
     </table>
+     </div>
+      </div>
   </section>
-  <section class="product">
+  <!---<section class="product">
     <img class="product-item" src="img/slider-2.png" alt="Фитнес-браслет">
     <b>Худеем
     правильно!</b>
@@ -100,7 +115,7 @@
         <td>Радиус поражения</td>
       </tr>
     </table>
-  </section>
+  </section>-->
   <section class="catalog">
     <ul class="catalog-item">
       <li class="catalog-popular">
@@ -123,7 +138,10 @@
       </li>
     </ul>
   </section>
+  </div>
+  
   <div class="service">
+   <div class="wrapper">
     <ul class="services">
       <li><button class="services-button" type="button">Доставка</button></li>
       <li><button class="services-button" type="button">Гарантия</button></li>
@@ -137,12 +155,14 @@
     </p>
   </section>
   </div>
+  </div>
   <div class="slider">
   <label for="item-slider" class="visually-hidden">Переключить товар </label>
     <input id="item-slider" type="radio" name="item-slider" >
     <input id="item-slider" type="radio" name="item-slider" >
     <input id="item-slider" type="radio" name="item-slider" >
   </div>
+  <div class="wrapper">
   <ul class="partners">
     <li class="partners-logo"><img src="img/logo-1.png" alt="DJI"></li>
     <li class="partners-logo"><img src="img/logo-2.png" alt="SP Gadgets"></li>
@@ -167,6 +187,7 @@
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1123749473636!2d37.52742931602769!3d55.68703400452987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsINCg0L7RgdGB0LjRjywgMTE5MzEx!5e0!3m2!1sru!2sus!4v1520274363794" width="800" height="360" frameborder="0" style="border:0" allowfullscreen></iframe>
     <button class="write-to-us button" type="button">Напишите нам</button>
   </section>
+  </div>
 </main>
 
   <footer class="footer-main">
