сделала сетку на 2 страницы
вопросы
1.между фильтр и сорт не делается space-between
2.валентин петухов в футере на другой высоте

--- a/index.html
+++ b/index.html
@@ -74,8 +74,12 @@
       
   </section>
   </div>
-  <!---<section class="product">
+  <div class="container">
+  <section class="product">
+   <div class="product-image move-up">
     <img class="product-item" src="img/slider-2.png" alt="Фитнес-браслет">
+      </div>
+     <div class="product-info move-up">
     <b>Худеем
     правильно!</b>
     <p>
@@ -91,9 +95,16 @@
         <td>Без подзарядки</td>
       </tr>
     </table>
+      </div>
   </section>
+   
+    </div>
+    <div class="container">
   <section class="product">
+   <div class="product-image move-up">
     <img class="product-item" src="img/slider-3.png" alt="Квадрокоптер">
+      </div>
+      <div class="product-info move-up">
     <b>Порхает как бабочка,
     жалит как пчела!</b>
     <p>
@@ -111,7 +122,10 @@
         <td>Радиус поражения</td>
       </tr>
     </table>
-  </section>-->
+      </div>
+  </section>
+  
+  </div>
   <section class="catalog container">
     <ul class="catalog-item">
       <li class="catalog-popular category">
@@ -138,9 +152,9 @@
   <div class="service">
    <div class="container">
     <ul class="services">
-      <li><button class="services-button" type="button">Доставка</button></li>
-      <li><button class="services-button" type="button">Гарантия</button></li>
-      <li><button class="services-button" type="button">Кредит</button></li>
+      <li class="delivery"><button class="services-button" type="button">Доставка</button></li>
+      <li class="warranty"><button class="services-button" type="button">Гарантия</button></li>
+      <li class="credit"><button class="services-button" type="button">Кредит</button></li>
     </ul>
   <section class="services-about">
     <h2>Доставка</h2>
