--- a/inner.html
+++ b/inner.html
@@ -10,19 +10,21 @@
 <body>
  <div class="inner-header">
   <header class="header-main container">
-    <h1><a class="logo" href="index.html">DEVICE</a></h1>
+    <h1 class="main-logo"><a class="logo" href="index.html">DEVICE</a></h1>
     <section class="wrapp-menu">
       <form class="search" action="" method="post">
         <label for="search-field" class="visually-hidden">Поиск по сайту</label>
         <input id="search-field" type="search" placeholder="Поиск по сайту">
         <button class="seacrh-button" aria-label="Нажать поиск"></button>
      </form>
+     <div class="header-container">
       <a href="#" class="user-name">Валентин Петухов</a>
+      <a href="#" class="log-out">Выйти</a>
       <ul class="header-menu-small">
-        <li><a href="#">Выйти</a></li>
         <li><a href="#">Сравнить</a></li>
         <li><a href="#">Корзина</a></li>
       </ul>
+      </div>
     </section>
     <nav class="main-navigation wrapp-menu">
       <div class="header-catalog">
@@ -59,22 +61,22 @@
   <section class="filter">
   <h2 class="criteria-filter">Фильтр</h2>
   <form class="settings" action="#" method="post">
-  <fieldset>
+  <fieldset class="criteria-price">
     <p>
       <legend>Стоимость</legend>
       <label for="filter-price" class="visually-hidden">Стоимость</label>
       <input type="range" name="range" id="filter-price">
     </p>
   </fieldset>
-  <fieldset>
-    <legend>Цвет</legend>
+  <fieldset class="criteria-color">
+    <legend class="criteria-color">Цвет</legend>
     <label for="color-box" class="color"><input type="checkbox" name="black"  id="color-box">Черный</label>
     <label for="color-box" class="color"><input type="checkbox" name="white"  id="color-box">Белый</label>
     <label for="color-box" class="color"><input type="checkbox" name="blue"  id="color-box">Синий</label>
     <label for="color-box" class="color"><input type="checkbox" name="red" id="color-box" >Красный</label>
     <label for="color-box" class="color"><input type="checkbox" name="pink"  id="color-box">Розовый</label>
   </fieldset>
-  <fieldset>
+  <fieldset class="criteria-blue">
     <legend>Bluetooth</legend>
     <label><input type="radio" name="yes" сhecked>Есть</label>
     <label><input type="radio" name="no" >Нет</label>
