--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
      <div class="header-container">
          <a href="#" class="user-name">Войти</a>
           <ul class="header-menu-small">
-        <li><a href="#">Сравнить</a></li>
-        <li><a href="#">Корзина</a></li>
+        <li class="compare"><a href="#">Сравнить</a></li>
+        <li><a href="#" class="cart">Корзина</a></li>
       </ul>
      </div>  
    </div>
@@ -59,12 +59,12 @@
     </p>
     <a class="product-more button" href="#">Подробнее</a>
     <table class="product-item-description">
-      <tr>
-        <td>8,5 м</td>
-        <td>5 кг</td>
-        <td>Карбон</td>
+      <tr class="product-characters">
+        <td class="lenth">8,5 м</td>
+        <td class="weight">5 кг</td>
+        <td class="material">Карбон</td>
       </tr>
-      <tr>
+      <tr class="product-data">
         <td>Длина палки</td>
         <td>Вес палки</td>
         <td>Материал</td>
@@ -74,6 +74,7 @@
       
   </section>
   </div>
+  <!--
   <div class="container">
   <section class="product">
    <div class="product-image move-up">
@@ -124,8 +125,8 @@
     </table>
       </div>
   </section>
-  
   </div>
+  -->
   <section class="catalog container">
     <ul class="catalog-item">
       <li class="catalog-popular category">
@@ -180,7 +181,7 @@
   <div class="info container">
   <section class="about-us">
     <h2>О нас</h2>
-    <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+    <p>Огромный выбор гаджетов не оставит равнодушным гика, <br>который есть в каждом из нас.</p>
     <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
     <ul>
       <li>Деловые Линии</li>
@@ -205,9 +206,9 @@
       <h2>DEVICE</h2>
     
     <ul class="footer-menu-small">
-      <li><a href="#">Войти</a></li>
-      <li><a href="#">Сравнить</a></li>
-      <li><a href="#">Корзина</a></li>
+      <li><a href="#" class="sign-in footer">Войти</a></li>
+      <li><a href="#" class="compare footer" >Сравнить</a></li>
+      <li><a href="#" class="cart footer">Корзина</a></li>
     </ul>
     </div>
     <div class="footer-middle">
@@ -225,7 +226,7 @@
       <li><a href="#">Instagram</a></li>
       <li><a href="#">Twiter</a></li>
     </ul>
-    <a class="footer-html" href="https://htmlacademy.ru/">ссылка на академию</a>
+    <a class="footer-html " href="https://htmlacademy.ru/"><span class="visually-hidden">ссылка на академию</span></a>
     </div>
     </div>
   </footer>
